@@ -120,8 +120,9 @@ extern FrskyData frskyRSSI[2];
 extern int16_t FrskyHubData[] ;
 
 void FRSKY_Init(void);
-void FRSKY10mspoll(void);
+// static void FRSKY10mspoll(void);
 void FRSKY_setTxPacket( uint8_t type, uint8_t value, uint8_t p1, uint8_t p2 ) ;
+void check_frsky( void ) ;
 
 inline void FRSKY_setModelAlarms(void)
 {
